# criminal-db

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cli.py  compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish-dockerhub.yml  docker-publish-ghcr.yml  test.yml
criminal_db/: __init__.py  api.py  cli.py  cli_output.py  config.py  embedding.py  retrieval.py  search_unified.py  seed.py  server.py  validate.py  verify.py
criminal_db/catalog/: __init__.py  import_paths.py  ingest.py  manifest.py  markdown_export.py  pdf_extract.py
criminal_db/curation/: __init__.py  apply.py  overrides.py  report.py  rules.py
criminal_db/db/: __init__.py  migrations.py  operations.py  router.py  schema.py
criminal_db/harvester/: __init__.py  fetcher.py  listing.py  parser.py
criminal_db/ops/: __init__.py  backup.py
docs/: AGENTS.md  COPYRIGHT_AND_REDISTRIBUTION.md  CORPUS.md  DOCKER.md  GITHUB_ACTIONS_DOCKER.md  IMPORT.md  MCP_TOOLS.json  RUNBOOK.md  VALIDATION.md
examples/: hybrid_search.py
tests/: conftest.py  test_backup.py  test_case_tree.py  test_catalog.py  test_cli.py  test_config_paths.py  test_curation.py  test_curation_report.py  test_db.py  test_eval.py  test_fetcher.py  test_harvest_listing.py  test_import.py  test_listing.py  test_markdown_export.py  test_parser.py  test_real_canlii.py  test_retrieval.py  test_router.py  test_search_scope.py  test_seed.py  test_statutes.py  test_tui.py  test_unified_db.py  test_validate.py  test_verify.py
(+23 files in other folders)
